Closed Bug 520210 Opened 16 years ago Closed 16 years ago

js_PopInterpFrame breaks arena LIFO invariant

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dvander, Unassigned)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file, 1 obsolete file)

Attached patch fix (obsolete) — Splinter Review
No description provided.
Attachment #404285 - Flags: review?(brendan)
See my review comments at bug 459301 comment 44. /be
Attached patch v2Splinter Review
Attachment #404301 - Flags: review?(brendan)
Attachment #404285 - Attachment is obsolete: true
Attachment #404285 - Flags: review?(brendan)
Comment on attachment 404301 [details] [diff] [review] v2 >+++ b/js/src/jstracer.h >@@ -731,7 +731,7 @@ struct InterpState > double* deepBailSp; > > >- // Used when calling natives from trace to root the vp vector. */ >+ // Used when calling natives from trace to root the vp vector. > uintN nativeVpLen; > jsval *nativeVp; > }; This will conflict with Andreas, but it's a good fix. Bonus point for removing one of the two blank lines before the comment. /be
Attachment #404301 - Flags: review?(brendan) → review+
http://hg.mozilla.org/tracemonkey/rev/8954a8abbeb4 Forgot to remove extra blank line before qfin - no bonus points.
Whiteboard: fixed-in-tracemonkey
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: