Fixed js_PopInterpFrame breaking arena LIFO requirement (bug 520210, r=brendan).